Update of master branch draft -- all citations in APR.bib should be up-to-date; Images have not yet been finalized for this draft.

--- a/nate-am-review/APR.bib
+++ b/nate-am-review/APR.bib
@@ -1,12 +1,78 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-02-25 16:37:51 -0700 
+%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-02-27 12:43:31 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Li2017,
+	Author = {Shengyen Li and Ursula R. Kattner and Carelyn E. Campbell},
+	Date-Added = {2019-02-27 11:40:20 -0700},
+	Date-Modified = {2019-02-27 11:41:06 -0700},
+	Journal = {Interesting Materials and Manufacturing Innovation},
+	Month = {September},
+	Number = {3},
+	Pages = {229-248},
+	Title = {A Computational Framework for Materials Design},
+	Volume = {6},
+	Year = {2017}}
+
+@article{Gomez-Bombarelli2018,
+	Author = {Rafael G\'omez-Bombarelli and Jennifer N. Wei and David Duvenaud and Jos\'e Miguel Hern\'andez-Lobato and Benjam\'in S\'anchez-Lengeling and Dennis Sheberla and Jorge Aguilera-Iparraguirre and Timothy D. Hirzel and Ryan P. Adams and Al\'an Aspuru-Guzik},
+	Date-Added = {2019-02-27 10:50:50 -0700},
+	Date-Modified = {2019-02-27 10:52:34 -0700},
+	Journal = {ACS Central Science},
+	Pages = {268-276},
+	Title = {Automatic Chemical Design Using a Data-Driven Continuous Representation of Molecules},
+	Volume = {4},
+	Year = {2018}}
+
+@article{Bose2001,
+	Author = {Indranil Bose and Radha K. Mahapatra},
+	Date-Added = {2019-02-27 10:37:03 -0700},
+	Date-Modified = {2019-02-27 10:37:48 -0700},
+	Journal = {Information and Management},
+	Month = {February},
+	Pages = {211-225},
+	Title = {Business data mining -- a machine learning perspective},
+	Volume = {39},
+	Year = {2001}}
+
+@book{Brusilovsky2007,
+	Address = {New York},
+	Author = {Peter Brusilovsky and Alfred Kobsa and Wolfgang Nejdl},
+	Date-Added = {2019-02-27 10:33:20 -0700},
+	Date-Modified = {2019-02-27 10:56:03 -0700},
+	Editor = {Peter Brusilovsky and Alfred Kobsa and Wolfgang Nejdl},
+	Publisher = {Springer-Verlag},
+	Title = {The Adaptive Web},
+	Volume = {1},
+	Year = {2007}}
+
+@article{Olson2014,
+	Author = {G.B. Olson and C.J. Keuhmann},
+	Date-Added = {2019-02-27 10:23:32 -0700},
+	Date-Modified = {2019-02-27 10:24:18 -0700},
+	Journal = {Scripta Materialia},
+	Month = {September},
+	Pages = {25-30},
+	Title = {Materials genomics: From CALPHAD to flight},
+	Volume = {70},
+	Year = {2014}}
+
+@article{Pollock2016,
+	Author = {Tresa M. Pollock},
+	Date-Added = {2019-02-27 10:18:46 -0700},
+	Date-Modified = {2019-02-27 10:19:23 -0700},
+	Journal = {Nature Materials},
+	Month = {August},
+	Pages = {809-816},
+	Title = {Alloy design for aircraft engines},
+	Volume = {15},
+	Year = {2016}}
 
 @article{Ghiringhelli2015,
 	Author = {Luca M. Ghiringhelli and Jan Vybiral and Sergey V. Levechenko and Claudia Draxl and Matthias Scheffler},
@@ -23,7 +89,7 @@
 	Author = {J.E. Gubernatis and T. Lookman},
 	Date-Added = {2019-02-25 14:26:55 -0700},
 	Date-Modified = {2019-02-25 14:28:25 -0700},
-	Journal = {Physical Review Materials },
+	Journal = {Physical Review Materials},
 	Month = {December},
 	Number = {120301},
 	Title = {Machine learning in materials design and discovery: Examples from the present and suggestions for the future},
@@ -959,10 +1025,12 @@
 	Volume = {55},
 	Year = {2017}}
 
-@url{MGI,
+@techreport{MGI,
 	Date-Added = {2017-12-11 04:47:54 +0000},
-	Date-Modified = {2017-12-12 02:49:19 +0000},
-	Title = {National Science and Technology Council, Office of Science and Technology Policy, Materials Genome Initiative for Global Competitiveness},
+	Date-Modified = {2019-02-27 10:26:57 -0700},
+	Institution = {United States National Science and Technology Council, Office of Science and Technology Policy},
+	Month = {June},
+	Title = {Materials Genome Initiative for Global Competitiveness},
 	Year = {2011}}
 
 @article{Yap2015,
