--- a/nate-am-review/Main.tex
+++ b/nate-am-review/Main.tex
@@ -1,4 +1,4 @@
-\documentclass[preprint,superscriptaddress,nofootinbib]{revtex4-1}
+\documentclass[twocolumn,superscriptaddress,nofootinbib]{revtex4-1}
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -39,12 +39,11 @@
 \author{H. Wang}
 \affiliation{Department of Computer Science, Colorado School of Mines, Golden, CO 80401}
 
-\author{B. Meredig}
+\author{C.K.H. Borg}
 \author{J. Ling}
 \author{J. Saal}
-\author{C.K.H. Borg}
+\author{B. Meredig}
 \affiliation{Citrine Informatics, Redwood City, CA 94063}
-
 
 \author{A.P. Stebner$^*$}
 \affiliation{Department of Mechanical Engineering, Colorado School of Mines, Golden, CO 80401}
