--- a/nate-am-review/Notes/AnnotatedBibliography.tex
+++ b/nate-am-review/Notes/AnnotatedBibliography.tex
@@ -424,10 +424,14 @@ To be organized alphabetically by citation key.
 		\item Alloy design
 	\end{itemize}}
 	
+	\item \bibentry{Olson2014} \textbf{Very high level paper discussing materials genomics development, mentions the Questek Ferrium S53 alloy development. Cited in introduction.}
+	
 	\item \bibentry{Pal2014} \textbf{They present a thermomechanical finite element model that is faster and more robust (they claim) than other approaches; their target is toward verifying in situ close loop process control and for predicting residual stress or distortion build up.\begin{itemize}
 		\item FE thermomechanical model
 		\item ICME
 	\end{itemize}}
+	
+	\item \bibentry{Pollock2016} \textbf{Review article on ICME development of low RE alloys for aircraft turbine applications. Cited in introducion.}
 	
 	\item \bibentry{Pilania2013} \textbf{Paper is focused on material property prediction based on stable crystal structure; uses fingerprint representation of chemo-structural characteristics and electronic charge density to screen for materials; discovers `selection rules' for given material properties based on characteristics of fingerprints.}
 	\item \bibentry{Plotkowski2017} \textbf{Proposes an approach to predict transient heat conduction during e-beam PBF; looks at melt pool geometry and solid-liquid interface velocity; experimentally validated on IN718.}
