--- a/nate-am-review/SectionIV/SectionIV.tex
+++ b/nate-am-review/SectionIV/SectionIV.tex
@@ -1,11 +1,11 @@
 \section{Learning from the Past: Moving Towards Database-Driven Design of Additive}
 The scientific approaches to studying additive manufacturing discussed herein -- parametric analysis, computational modeling, in situ monitoring, and the like -- produce data. The application of machine learning to these scientific approaches likewise produces data. All of this data contains a slice of the AM design space. AM researchers who have access to more data in the design space can better tailor manufacturing processes and material properties. Furthermore, machine learning algorithms trained on large datasets typically have higher prediction accuracy and a greater range of behaviors they can model. Making AM process-structure and process-property data open and accessible to the scientific public accelerates the rate at which research and engineering advances.
 
-Databases of process-structure and process-property relationships are not a new concept in materials science. Databases like the Linus Pauling Files or International Crystal Structure Database have been widely used for materials design. However, databases of materials information are beginning to expand beyond general materials properties like thermodynamic behavior or crystal structure. Domain-specific databases are generated from high throughput experimental and computational investigations that have occurred over the past thirty years. Studying and understanding the development of data-driven fields in materials science can aid in the development of data-driven approaches for additive manufacturing. 
+Databases of process-structure and process-property relationships are not a new concept in materials science. Databases like the Linus Pauling Files or International Crystal Structure Database have been widely used for materials design. However, databases of materials information are beginning to expand beyond general materials properties like thermodynamic behavior or crystal structure. Domain-specific databases are being generated from high throughput experimental and computational investigations that have occurred over the past thirty years. Studying and understanding the development of data-driven fields in materials science can aid in the development of data-driven approaches for additive manufacturing. 
 
 Experimental high throughput investigations have been used in materials science for many decades \cite{Xiang1995}. Common deposition techniques have enough degrees of freedom to allow for continuous compositional variation within a single sample, which allows for continuous mapping of composition-structure-property relationships \cite{Long2007, Long2009, Kusne2015a}. These manufacturing methods have the same design space problem that additive has: the number of possible input combinations obscures many of the important underlying process-structure phenomenon. In cases like this, manufacturing and characterizing large catalogues of samples can lead to optimized properties faster than a theory-driven approach \cite{Ceder1998, Pilania2013}. High throughput deposition studies with chemical vapor deposition, metallorganic chemical vapor deposition, physical vapor deposition, and atomic layer deposition, among other techniques are commonplace for the manufacturing of sensors, batteries, photovoltaics, electronics, and the like \cite{Hampden-Smith1995, Gilmer1998, Mercey1999, Mitzi2001}. Furthermore, the parameters of interest in these studies can sometimes be quickly catalogued using high throughput characterization techniques like laboratory X-ray diffraction and electron probe microanalysis. 
 
-These studies culminate in large libraries of material properties listed as a function of composition. As far back as the 1990s, data-driven algorithms were being applied to these large libraries of composition-property data. Evolutionary and genetic algorithms were trained on composition to predict stable crystal structure and material properties \cite{Deaven1995, Morris1996, Woodley1999, Stucke2003, Wolf2000}. Even neural networks, which did not have the widespread then use that they have now, were being applied for the prediction of crystal structures based on composition \cite{Sumpter1996}. 
+These studies culminate in large libraries of material properties listed as a function of composition. As far back as the 1990s, data-driven algorithms were being applied to these large libraries of composition-property data. Evolutionary and genetic algorithms were trained on composition to predict stable crystal structure and material properties \cite{Deaven1995, Morris1996, Woodley1999, Stucke2003, Wolf2000}. Even neural networks, which did not have the widespread then use then that they have now, were being applied for the prediction of crystal structures based on composition \cite{Sumpter1996}. 
 
 Modeling challenges in materials science have also been tackled using large databases with machine learning. Packages such as the Vienna Ab initio Simulation Package (VASP) have been employed for high throughput searches of stable material systems with a wide range of properties. Computational high throughput investigations have proven to closely match experiments in many regimes \cite{Curtarolo2005}. 
 High throughput density functional theory (DFT) studies generate quite a bit of data and are therefore well equipped for machine learning and database-driven design. The application of high throughput DFT is widespread for design of materials with all sorts of properties including high temperature superconductors \cite{Kolmogorov2006}, lithium ion batteries \cite{Kang2006, Chen2012, Kirklin2013}, molecule design \cite{Mannodi-Kanakkithodi2016, Butler2018}, cathode materials \cite{Hautier2013}, piezoelectrics \cite{Roy2012}, ferroelectrics \cite{Bennett2012}, corrosion resistant films \cite{Ciobanu2005}, and thermoelectrics \cite{Wang2011, Yan2015}. Each of these studies, like parametric studies in additive, vary a set number of model input parameters and measure a lsmaterial property as the dependent response.
@@ -18,8 +18,8 @@ In an effort to reduce the design time on material systems, programs like the Ma
 
 Furthermore, many of these online databases also provide tools for performing material design. The Materials Project offers a design interface, whereby users can specify a set of material properties and are provided with a list of likely candidate materials. Other projects, like AFLOW, allow for fast high-throughput DFT calculations of a wide range of material systems. 
 
-Having open, accessible databases also improves the rate at which machine learning can be applied to design for additive manfuacturing. Machine learning as a tool driving materials design was proposed some time ago. Review articles have explored the many and varied uses of machine learning across materials science, many of the applications finding great success \cite{Kalidindi2016, Ramprasad2017, Gubernatis2018}. A review article on best practices for machine learning in materials science can be found here \cite{Wagner2016}. 
-
 The generation of databases that are accessible to the scientific public is a primary step on the roadmap of the Materials Genome Initiative \cite{DePablo2014}. Much of the development of materials databases have focused on computationally-derived materials information. Infrastructure and standards need to be developed that allow for sharing of experimental data that is understandable and usable by many researchers. Data journals are becoming more common for sharing datasets from scientific investigations and are making strides in standardizing data-sharing infrastructure \cite{Wilkinson2016}. The publication of datasets themselves for public use is becoming more common \cite{DeJong2015, Kim2017}. 
+
+Having open, accessible databases improves the rate at which machine learning can be applied to design for additive manfuacturing. Machine learning as a tool driving materials design was proposed some time ago. Review articles have explored the many and varied uses of machine learning across materials science, many of the applications finding great success \cite{Kalidindi2016, Ramprasad2017, Gubernatis2018}. A review article on best practices for machine learning in materials science can be found here \cite{Wagner2016}. 
 
 Additive manufacturing should move toward the same types of infrastructure for open data sharing. The combinatorial problems in additive are widespread and cover many, many length scales. Large institutions may have the resources to link time- and length-scales in additive manufacturing. Smaller research groups are often limited to studying a single process phenomenon and do not necessarily have means to integrate their knowledge into other additive manufacturing studies. The generation of additive databases allows for a democratization of research and an acceleration of the pace at which additive manufacturing advances are made. 
