--- a/nate-am-review/SectionIII/SectionIII.tex
+++ b/nate-am-review/SectionIII/SectionIII.tex
@@ -1,7 +1,7 @@
 \section{Current ICME Tools are Well Equipped to Integrate with an ML Framework}
-The following section details how machine learning approaches can tie-in to current efforts in AM. Since the study of AM is often focused around specific problems, this section is tailored to many common areas of study within AM. Different methods of analysis and characterization for different aspects of AM all tie-in well with different machine learning algorithms. Even more so, ML can be used to automate the generation of knowledge about AM process-structure and process-property relationships. 
+The following section details how machine learning approaches can tie-in to current efforts in AM. Since the study of AM is often focused around specific problems, this section is tailored to many common areas of study within AM. Typical analysis, characterization, and simulation methods for AM tie-in well with different machine learning algorithms. Even more so, ML can be used to automate the generation of knowledge about AM process-structure and process-property relationships. 
 
-This article is not an exhaustive review of machine learning algorithms. The algorithms discussed were chosen because they were previously demonstrated in a materials science and engineering applications \textbf{or} because the possible application of an algorithm to AM was clear and immediate. Similarly, the additive manufacturing problems addressed are not all-encompassing. The AM problems discussed are those which the authors felt most immediately addressable with machine learning. 
+This article is not an exhaustive review of either machine learning algorithms or additive manufacturing. The algorithms discussed were chosen because they were previously demonstrated in a materials science and engineering applications \textbf{or} because the possible application of an algorithm to AM was clear and immediate. Similarly, the additive manufacturing problems addressed are not all-encompassing. The AM problems discussed are those which the authors felt most immediately addressable with machine learning. 
 
 %~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~
 \subsection{Pre-Build Design}
@@ -11,9 +11,9 @@ This article is not an exhaustive review of machine learning algorithms. The alg
 
 %~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~
 \subsection{Process Design}
-Integrated computational materials engineering, as the name may imply, is primarily focused around \textit{computational} engineering of materials. In experimental and engineering studies, the design space in AM makes choosing useful experiments difficult. Similarly, in modeling the wide range of AM physics to consider makes full-scale, full-physics computational difficult. This section focuses around applying machine learning algorithms to aid in computational studies and design of additive manufacturing. 
+Integrated computational materials engineering, as the name may imply, is primarily focused around \textit{computational} engineering of materials. In experimental and engineering studies, the design space in AM makes choosing useful experiments difficult. Similarly, the wide range of AM physics to consider for modeling makes full-scale, full-physics computational difficult. This section focuses around applying machine learning algorithms to aid in computational studies and design of additive manufacturing. 
 
-\input{SectionIII/ReducingComputationalComplexity}
+\input{SectionIII/ModelComplexityDimensionalityReduction}
 \input{SectionIII/SurrogateModeling}
 
 %~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~
